--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -98,6 +98,30 @@ a.link:hover{
     transform: scale(1.1);
 }
 
+#profile_image {
+    display: none;
+}
+
+#previewImage {
+    cursor: pointer;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    padding: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, .1);
+    transition: all 300ms ease-in-out;
+}
+
+#previewImage:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .2);
+}
+
+#saveButton {
+    display: none;
+    margin-top: 10px;
+}
+
 /* register/login */
 
 .panel-section{
