--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,11 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    text-decoration: none;
-}
+    text-decoration: none;}
 
 body {
-    background-color: #f4f4f4;
+    background-color: #a9c3df;
+}
+
+h1{
+    color: rgb(0, 70, 128);
+    font-weight: bold;
 }
 
 .container{
@@ -25,24 +29,23 @@ body {
 }
 
 .information.error{
-    background-color: #f8d7da;
-    color: #721c24;
-    border: 1px solid #f5c6cb;
+    background-color: #fd62714d;
+    color: #ff0019;
     border-radius: 5px;
 }
 
 .information.success{
-    background-color: #d4edda;
-    color: #155724;
-    border: 1px solid #c3e6cb;
+    background-color: #bfe5a673;
+    color:#33b448;
     border-radius: 5px;
 }
 
 a.link{
-    color: #007bff;
+    color: #2d93ff;
     cursor: pointer;
     font-weight: bold;
     transition: all 300ms ease-in-out;
+    font-size: 14px;
 }
 
 a.link:hover{
@@ -139,15 +142,20 @@ a.link:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+    background-color: #ffffff;
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
     gap: 20px;
-    padding: 20px;
+    padding: 50px;
+    border-radius: 20px;
 }
 
 .form-group{
     width: 100%;
     text-align: center;
+}
+
+.form-group, p{
+    font-size: 14px;
 }
 
 .panel-section form input{
@@ -164,12 +172,13 @@ a.link:hover{
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: green;
-    box-shadow: 0 0 5px rgba(0, 255, 0, .5);
+    background-color: rgb(0, 70, 128);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     color: #fff;
     margin: 0 auto;
     cursor: pointer;
     transition: all 300ms ease-in-out;
+    font-weight: bold;
 }
 
 .panel-section form button:hover{
