--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    text-decoration: none;}
+    text-decoration: none;
+}
 
 body {
     background-color: #a9c3df;
@@ -65,13 +66,13 @@ a.link:hover{
     font-size: 20rem;
     letter-spacing: 50px;
     text-align: center;
-    color: gray;
+    color: white;
 }
 
 .error-description{
     font-size: 1.5rem;
     text-align: center;
-    color: gray;
+    color: white;
 }
 
 /* profile */
@@ -142,11 +143,11 @@ a.link:hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    background-color: #f4f4f4;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
     gap: 20px;
     padding: 50px;
-    border-radius: 20px;
+    border-radius: 12px;
 }
 
 .form-group{
@@ -163,16 +164,17 @@ a.link:hover{
     padding: 10px;
     outline: none;
     border: 1px solid #ccc;
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    background: transparent;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
 
 .panel-section form button{
-    width: 300px;
+    width: 100%;
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: rgb(0, 70, 128);
+    background-color: #004680;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     color: #fff;
     margin: 0 auto;
@@ -182,7 +184,7 @@ a.link:hover{
 }
 
 .panel-section form button:hover{
-    transform: scale(1.1);
+    transform: scale(1.03);
 }
 
 
@@ -190,7 +192,10 @@ a.link:hover{
 
 @media screen and (max-width: 960px) {
 
-    
+    .panel-section{
+        width: 100%;
+    }
+
     /* 404 */
 
     .error-title{
